result-deploy&service.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  labels:
     app: result-deploy
  name: result-deploy
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: result-deploy
  template:
    metadata:
      labels:
        app: result-deploy
    spec:
      containers:
      - name: result 
        image: avkya/resultserver
        
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resultserver-svc
  name: resultserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: result-deploy
  type: NodePort
