web-deploy&service.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  labels:
     app: web-deploy
  name: web-deploy
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: web-deploy
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      containers:
      - name: result 
        image: avkya/webserver
        
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  lawebserver-svcbels:
    app: webserver-svc
  name: 
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: web-deploy
  type: NodePort
