ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  
  - http:
    paths:
    - pathType: Prefix
      path: /
      backend:
        service:
          name: webserver-svc
          port: 
            number: 80
  - http:
    paths:
    - pathType: Prefix
      path: /result
      backend:
        service:
          name: resultserver-svc
          port: 
            number: 80
